force-app/main/default/objects/IFv2_RequestExtension3__c/fields/TotalWithdrawalLimitinUS__c.field-meta.xml
<CustomField>
    <fullName>TotalWithdrawalLimitinUS__c</fullName>
    <inlineHelpText>*** The amount of DELIVERY can not be greater than the amount of PURCHASE.</inlineHelpText>
    <label>Total Withdrawal Limit in US $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>