force-app/main/default/objects/IFv2_RequestExtension3__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>User email:</label>
    <type>Email</type>
</CustomField>