force-app/main/default/objects/IFv2_RequestExtension3__c/fields/X61DataChangeAddress__c.field-meta.xml
<CustomField>
    <fullName>X61DataChangeAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6-1) Data Change - Address.</label>
    <type>Checkbox</type>
</CustomField>