force-app/main/default/objects/IFv2_RequestExtension3__c/fields/X62DataChangeCostCenter__c.field-meta.xml
<CustomField>
    <fullName>X62DataChangeCostCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6-2) Data Change - Cost Center.</label>
    <type>Checkbox</type>
</CustomField>