force-app/main/default/objects/IFv2_RequestExtension3__c/fields/X63ChangeofDataBankData__c.field-meta.xml
<CustomField>
    <fullName>X63ChangeofDataBankData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6-3) Change of Data - Bank Data.</label>
    <type>Checkbox</type>
</CustomField>