force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>ZIPCODE__c</fullName>
    <label>ZIP CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>